--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -124,23 +124,89 @@
     }
 
     .panel-formcontextualhelp__icon {
-      content: url('images/icon-contextual-help-info-blue-info.svg');
+      content: url('images/icon-contextual-help-primary-info.svg');
     }
 
     .panel-formcontextualhelp__footer__link::after {
-      content: url('images/icon-contextual-help-arrow-primary.svg');
+      content: url('images/icon-contextual-help-primary-info-link-arrow.svg');
     }
   }
 
-  /* New variant: .panel-formcontextualhelp--info.panel-formcontextualhelp--secondary */
+  /* Secondary variant */
   &--info.panel-formcontextualhelp--secondary {
-    border-radius: 8px;
-    border: 1px solid var(--Stroke-Tertiary, #A1B3C8);
-    background: var(--Shades-Blues-Blue-10, #E6F2FA);
+    border-radius: $border-radius-mid;
+    border: 1px solid $border-radius-mid;
+    background: $color-shade-blue-10;
 
     .panel-formcontextualhelp__footer__link,
     .panel-formcontextualhelp__footer__link-text {
-      color: var(--Text-Dark-Dark, #134276);
+      color: $color-primary-navy;
     }
   }
+
+  /* Tertiary variant */
+  &--info.panel-formcontextualhelp--tertiary {
+    border-radius: $border-radius-mid;
+    border: 1px solid $stroke-dark;
+    background: $bg-dark;
+
+    .panel-formcontextualhelp__title,
+    .plain-text-wrapper p,
+    .panel-formcontextualhelp__footer__link,
+    .panel-formcontextualhelp__footer__link-text {
+      color: $color-white;
+    }
+  }
+
+
+  /* Warning variant */
+  &--warning.panel-formcontextualhelp--primary {
+    border-radius: var(--Corner-radius-Mid, 8px);
+    border: var(--Stroke-weight-Separator, 2px) solid var(--Stroke-Error, #D03633);
+    background: var(--Shades-Red-Red-05, #FDF5F5);
+
+    .panel-formcontextualhelp__title {
+      color: var(--Text-Dark-Error, #D03633);
+    }
+
+    .plain-text-wrapper p {
+      color: var(--Text-Dark-Primary, #333);
+    }
+
+    .panel-formcontextualhelp__footer__link,
+    .panel-formcontextualhelp__footer__link-text {
+      color: var(--Text-Dark-Error, #D03633);
+    }
+
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-warning-error.svg');
+    }
+
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-warning-error-link-arrow.svg');
+    }
+  }
+
+  /* Warning Secondary variant */
+  &--warning.panel-formcontextualhelp--secondary {
+    border-radius: var(--Corner-radius-Mid, 8px);
+    border: 1px solid var(--Stroke-Error, #D03633);
+    background: var(--Background-Dark-Error, #D03633);
+
+    .panel-formcontextualhelp__title,
+    .plain-text-wrapper p,
+    .panel-formcontextualhelp__footer__link,
+    .panel-formcontextualhelp__footer__link-text {
+      color: $color-white;
+    }
+
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-warning-error.svg');
+    }
+
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-warning-error-link-arrow.svg');
+    }
+  }
+
 }
