style(form): wizard intro

--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -1,5 +1,6 @@
 @use '../../../../styles/settings' as *;
 @use 'wizard-theme';
+@use 'wizard-intro';
 
 .wizard {
   min-height: $wizard-body-height;
