--- a/blocks/form/components/wizard/_wizard-theme.scss
+++ b/blocks/form/components/wizard/_wizard-theme.scss
@@ -9,69 +9,16 @@ main {
       $color-accent 25%,
       $color-primary-navy 100%
     );
-    color: $color-white;
 
-    .text-wrapper,
-    .number-wrapper,
-    .email-wrapper,
-    .radio-wrapper {
-      label,
-      .field-label {
-        color: $color-white;
+    &::after {
+      @include media('tablet') {
+        background-image: url('/images/mymsd-unity-pattern-top-right.svg');
+        background-position: top right;
       }
 
-      input,
-      textarea {
-        color: $color-white;
-
-        &::placeholder {
-          color: rgba($color-white, 0.75);
-        }
-      }
-    }
-
-    h1,
-    h2,
-    h3 {
-      color: $color-white;
-      background: none;
-      background-clip: unset;
-      -webkit-background-clip: unset;
-      -webkit-text-fill-color: $color-white;
-      font-family: $font-family;
-      margin-bottom: $spacing-600;
-
-      &:last-child:not(:first-child) {
-        margin-bottom: 0;
-      }
-    }
-
-    h4,
-    h5,
-    h6 {
-      color: $color-white;
-      font-family: $font-family;
-      margin-bottom: $spacing-100;
-
-      &:last-child:not(:first-child) {
-        margin-bottom: 0;
-      }
-    }
-
-    p,
-    .subtitle {
-      color: $color-white;
-    }
-
-    .subtitle {
-      font-style: normal;
-      font-weight: lighter;
-      line-height: 130%;
-      margin: 0;
-
-      p {
-        margin: 0;
-        font-size: $size-font-subtitle;
+      @include media('desktop') {
+        background-image: url('/images/mymsd-unity-pattern-bottom-left.svg');
+        background-position: bottom left;
       }
     }
   }
