--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -13,7 +13,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $font-family;
   margin-top: 0;
   margin-bottom: $spacing-600;
 
@@ -24,34 +23,28 @@ h6 {
 
 h1 {
   @include heading-level-1;
-  font-size: $size-font-h1;
 }
 
 h2 {
   @include heading-level-2;
-  font-size: $size-font-h2;
 }
 
 h3 {
   @include heading-level-3;
-  font-size: $size-font-h3;
 }
 
 h4 {
   @include heading-level-4;
-  font-size: $size-font-h4;
   color: $text-dark;
 }
 
 h5 {
   @include heading-level-5;
-  font-size: $size-font-h5;
   color: $text-dark;
 }
 
 h6 {
   @include heading-level-6;
-  font-size: $size-font-h6;
   color: $text-dark;
 }
 
@@ -59,6 +52,7 @@ h6 {
    Paragraph Default
 ------------------------------ */
 p {
+  margin-top: 0;
   margin-bottom: $spacing-500;
   line-height: 160%;
   color: $text-primary;
@@ -109,19 +103,34 @@ ul li {
 .strap-title,
 .strap-title-small {
   text-transform: uppercase;
-  line-height: 100%;
-  color: $text-dark;
 }
 
 .strap-title {
   font-size: $size-font-strap-title;
-  margin: 0 0 8px 0;
+  color: $color-primary-navy;
+  margin-bottom: $spacing-400;
 
-  &:last-child {
+  p {
+    color: $color-primary-navy;
+    font-size: $size-font-strap-title;
     margin-bottom: 0;
   }
 }
 
 .strap-title-small {
   font-size: $size-font-strap-title-small;
+}
+
+.subtitle {
+  font-size: $size-font-subtitle;
+  font-weight: 300;
+  line-height: 130%;
+  margin-bottom: $spacing-500;
+
+  p {
+    font-size: $size-font-subtitle;
+    font-weight: 300;
+    line-height: 130%;
+    margin: 0;
+  }
 }
