--- a/blocks/form/_form-panel.scss
+++ b/blocks/form/_form-panel.scss
@@ -3,12 +3,21 @@
 .form-panel-header {
   padding: $spacing-500 0;
 
-  p:not(:last-child) {
-    margin-bottom: $spacing-500;
-  }
-
   @include media('desktop') {
     padding: $spacing-700 0;
+  }
+
+  h1,
+  h2,
+  h3 {
+    background: $color-gradient-blue;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  p:not(:last-child) {
+    margin-bottom: $spacing-500;
   }
 }
 
