--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -4,7 +4,7 @@
 
 // Primary Colours
 $color-primary: #017ac9; // MSD Blue
-$color-primary-accessible: #0071BB; // Accessible MSD Blue
+$color-primary-accessible: #0071BB; // ***** NEW! Accessible MSD Blue
 $color-primary-navy: #134276; // MSD Navy
 $color-primary-dark-navy: #162c45; // MSD Dark Navy
 $color-accent: #017ac9; // Same as MSD Blue
