--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -145,7 +145,12 @@
     .panel-formcontextualhelp__footer__link::after {
       background-image: url('/icons/icon-contextual-help-primary-info-link-arrow.svg');
     }
-  }
+    .panel-formcontextualhelp__footer__link:hover,
+    .panel-formcontextualhelp__footer__link:focus,
+    .panel-formcontextualhelp__footer__link-text:hover,
+    .panel-formcontextualhelp__footer__link-text:focus {
+      color: $color-primary-navy;
+  }}
 
   /* Secondary Info */
   &--info.panel-formcontextualhelp--secondary {
@@ -165,7 +170,12 @@
     .panel-formcontextualhelp__footer__link::after {
       background-image: url('/icons/icon-contextual-help-secondary-info-link-arrow.svg');
     }
-  }
+    .panel-formcontextualhelp__footer__link:hover,
+    .panel-formcontextualhelp__footer__link:focus,
+    .panel-formcontextualhelp__footer__link-text:hover,
+    .panel-formcontextualhelp__footer__link-text:focus {
+      color: $color-accent;
+    }}
 
   /* Tertiary Info */
   &--info.panel-formcontextualhelp--tertiary {
@@ -187,7 +197,12 @@
     .panel-formcontextualhelp__footer__link::after {
       background-image: url('/icons/icon-contextual-help-tertiary-info-link-arrow.svg');
     }
-  }
+    .panel-formcontextualhelp__footer__link:hover,
+    .panel-formcontextualhelp__footer__link:focus,
+    .panel-formcontextualhelp__footer__link-text:hover,
+    .panel-formcontextualhelp__footer__link-text:focus {
+      color: $color-shade-blue-10;
+    }}
 
   /* Warning Primary */
   &--warning.panel-formcontextualhelp--primary {
@@ -215,7 +230,12 @@
     .panel-formcontextualhelp__footer__link::after {
       background-image: url('/icons/icon-contextual-help-warning-primary-link-arrow.svg');
     }
-  }
+    .panel-formcontextualhelp__footer__link:hover,
+    .panel-formcontextualhelp__footer__link:focus,
+    .panel-formcontextualhelp__footer__link-text:hover,
+    .panel-formcontextualhelp__footer__link-text:focus {
+      color: $text-dark-primary;
+    }}
 
   /* Warning Secondary */
   &--warning.panel-formcontextualhelp--secondary {
@@ -237,5 +257,13 @@
     .panel-formcontextualhelp__footer__link::after {
       background-image: url('/icons/icon-contextual-help-warning-secondary-link-arrow.svg');
     }
-  }
+    .panel-formcontextualhelp__footer__link:hover,
+    .panel-formcontextualhelp__footer__link:focus,
+    .panel-formcontextualhelp__footer__link-text:hover,
+    .panel-formcontextualhelp__footer__link-text:focus {
+      color: $text-dark-primary;
+    }}
+
+
+
 }
