--- a/styles/forms/_checkbox.scss
+++ b/styles/forms/_checkbox.scss
@@ -123,7 +123,7 @@
 
       label {
         display: flex;
-        padding: 8px 12px 8px 20px;
+        padding: $spacing-200 $spacing-300;
         align-items: center;
         gap: 0;
         background-color: $color-white;
