--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -114,12 +114,6 @@ form:not(.edit-mode) [data-visible='false'] {
   color: unset;
 }
 
-.form textarea {
-  min-height: 100px;
-  font-family: $font-family;
-  font-size: $size-font-body-default;
-}
-
 .form label.required::after {
   content: '*';
   color: var(--form-label-color);
@@ -324,4 +318,46 @@ form .file-wrapper > button {
 
 .checkbox-wrapper > label {
   order: 1;
+}
+
+// Personal details
+.field-panel-personal-details {
+  .field-fullname,
+  .field-phone,
+  .field-email,
+  .field-address {
+    label {
+      color: $text-dark;
+      font-size: $size-font-label;
+      margin-top: 0;
+      margin-bottom: 8px;
+      display: block;
+    }
+
+    input,
+    textarea {
+      border: none;
+      padding: 0;
+      background: none;
+    }
+
+    textarea {
+      min-height: 100px;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      height: 1px;
+      width: 100%;
+      background-color: $color-shade-navy-20;
+      margin: $spacing-500 0;
+    }
+  }
+
+  .field-address {
+    &::after {
+      display: none;
+    }
+  }
 }
