--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -17,9 +17,9 @@
   padding: $spacing-400;
   background-color: $bg-light-primary;
   font-family: $font-family;
-  font-size: 20px;
-  line-height: 120%;
-  color: $text-primary;
+  font-size: $size-font-input-text;
+  line-height: 133%;
+  color: $text-dark-primary;
   caret-color: $color-primary;
 
   &::placeholder {
